--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     .summary-message {
       font-size: 1.25rem;
-      color: #ffe87f; /* Bright, visible yellow */
+      color: #302828; /* Bright, visible yellow */
       margin-top: 15px; /* Added top margin for spacing from options */
       margin-bottom: 25px;
       text-shadow: 0 0 8px #ecb800;
