--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     h1 {
       font-family: "Orbitron", sans-serif;
       font-size: 3rem;
-      color: #f9d423;
+      color: #1f2124;
       text-shadow:
         0 0 6px #f9d423,
         0 0 10px #f9d423,
