--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       font-size: 1.5rem;
       margin-bottom: 30px; /* increased margin for spacing */
       font-weight: 700;
-      color: #ffe87f;
+      color: #000cf5;
       text-shadow:
         0 0 5px #f9d423,
         0 0 10px #f9d423;
